# transcriber

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.base.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yaml
proto/: whisper.proto
whisper/: Dockerfile  main.py  server.py  storage.py
