[tool.poetry]
name = "transcriber-backend"
version = "0.1.0"
description = "Shared Whisper transcription gRPC service"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.62"
protobuf = ">=5.0"
faster-whisper = "^1.0"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.62"
mypy-protobuf = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
